# marta-pulse

./: .gitignore  LESSONS.md  README.md  TODO.md  pyproject.toml
.github/workflows/: cd-fabric-deploy.yml  ci-validate.yml
deploy/: deploy_fabric.py  parameter.yml
deploy/config/: dev.yml  prod.yml  test.yml
docs/: architecture.md
docs/adr/: 0001-canonical-event-schema.md  0002-scd2-on-feed-version.md
fabric/: parameter.yml
fabric/ACT_Bunching_Alert.Activator/: PLACEHOLDER.md
fabric/MartaPulse_ES.Eventstream/: PLACEHOLDER.md
fabric/MartaPulse_KQLDB.KQLDatabase/: DatabaseSchema.kql
fabric/MartaPulse_LH.Lakehouse/: .platform
fabric/NB_Bronze_GTFS_Unzip.Notebook/: .platform  notebook-content.py
fabric/NB_Gold_Deviation.Notebook/: .platform  notebook-content.py
fabric/NB_Gold_Headway_Bunching.Notebook/: .platform  notebook-content.py
fabric/NB_Silver_Schedule_Conform.Notebook/: .platform  notebook-content.py
fabric/NB_Silver_Telemetry_Stream.Notebook/: .platform  notebook-content.py
fabric/PL_GTFS_Static_Ingest.DataPipeline/: .platform  pipeline-content.json
fabric/PL_Telemetry_Refresh.DataPipeline/: .platform  pipeline-content.json
fabric/RPT_MartaPulse.Report/: PLACEHOLDER.md
fabric/RTD_LiveOps.KQLDashboard/: PLACEHOLDER.md
fabric/SM_MartaPulse.SemanticModel/: PLACEHOLDER.md
functions/ingest_gtfs_rt/: function_app.py  host.json  local.settings.json.example  requirements.txt
infra/: main.bicep
src/marta_pulse/: __init__.py  canonical.py  deviation.py  gtfs_static.py  quality.py
tests/: test_canonical.py  test_deviation.py
(+3 files in other folders)
